# pppps2pc

./: .gitignore  .prettierignore  .pylintrc  .wiswa.jsonnet  70-ppp.rules  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE.txt  README.md  package.json  pppps2pc.py  pyproject.toml  sh.tat.pppps2pc.yml  snapcraft.yaml
.claude/agents/: click-auditor.md  coverage-improver.md  docstring-fixer.md  mypy-fixer.md  python-expert.md  regen.md  release.md  test-writer.md  wiswa-sync.md
.claude/skills/ci/: SKILL.md
.github/instructions/: general.instructions.md
.github/workflows/: appimage.yml  flatpak.yml  pyinstaller.yml  qa.yml  release.yml  snap.yml  tests.yml
.stubs/: hid.pyi
docs/: badges.rst  conf.py  index.rst
kernel/: Makefile  README.md  hid-konami-ppp.c
man/: pppps2pc.1
pppps2pc/: __init__.py  constants.py  main.py  utils.py
ps2-decompile/: README.md  attach.c  callbacks.c  callbacks.h  detach.c  driver.c  driver.h  globals.c  globals.h  main.c  probe.c  shared.h  unit.c  unit.h  utils.c  utils.h
tests/: test_main.py  test_utils.py
