[tool.poetry]
authors = ["Andrew Udvare <audvare@gmail.com>"]
classifiers = ["Topic :: Utilities"]
description = "Enable the ParaParaParadise controller with HIDAPI."
documentation = "https://github.com/Tatsh/pppps2pc"
homepage = "https://github.com/Tatsh/pppps2pc"
include = ["99-ppp.rules"]
keywords = ["command line", "utilities", "paraparaparadise", "peripherals"]
license = "MIT"
name = "pppps2pc"
readme = "README.md"
version = "0.0.1"

[tool.poetry.dependencies]
python = "^3.10"
hidapi = ">=0.13.1,<0.15.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.2.0"
pylint = ">=2.17.2,<4.0.0"
pylint-quotes = "^0.2.3"
rope = "^1.7.0"
toml = "^0.10.2"
yapf = ">=0.32,<0.41"

[tool.poetry.group.packaging.dependencies]
wheel = ">=0.40,<0.43"
twine = ">=4.0.2,<6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
activate-ppp = "pppps2pc:main"
